[package]
name = "umqtt"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Andreas Wass"]
repository = "https://github.com/AndWass/umqtt"
description = "A no_std compatible MQTT library and client"
categories = ["no-std::no-alloc", "network-programming", "asynchronous"]

[dependencies]

[dev-dependencies]
tokio = { version = "1.44.2", features = ["full"] }
spin_on = "0.1.1"